crates/musli-tests/tests/ui/illegal_fallback_variant_error.stderr
error: #[musli(default)] variant must be empty
 --> tests/ui/illegal_fallback_variant_error.rs:6:5
  |
6 | /     #[musli(default)]
7 | |     Variant {
8 | |         field: u32,
9 | |     }
  | |_____^

error: #[musli(default)] only one fallback variant is supported
  --> tests/ui/illegal_fallback_variant_error.rs:18:5
   |
18 |     Fallback2,
   |     ^^^^^^^^^
